Fixed horizontal scrolling on mobile

--- a/api_app/static/api_app/css/notification.css
+++ b/api_app/static/api_app/css/notification.css
@@ -141,4 +141,10 @@
     height: 80px;
     padding: 5px;
   }
+
+  .row {
+    padding-top: 5px;
+    margin-left: 0px;
+    margin-right: 0px;
+  }
 }
